Update index.html with new dinner items

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 <label><input type="checkbox" name="item" value="Totino's Pizza Rolls"> Totino's Pizza Rolls</label>
                 <label><input type="checkbox" name="item" value="Frozen Pizza"> Frozen Pizza</label>
                 <label><input type="checkbox" name="item" value="Handmade Pizza"> Handmade Pizza</label>
+		<label><input type="checkbox" name="item" value="Super Nachos"> Super Nachos</label>
+		<label><input type="checkbox" name="item" value="Bean Burrito"> Bean Burrito</label>
+		<label><input type="checkbox" name="item" value="Soft Tacos"> Soft Tacos</label>
             </form>
         </article>
 
