--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
         <article>
             <h2>Lunch</h2>
             <form id="lunch-form">
-                <label><input type="checkbox" name="item" value="Turkey Sandwich"> Turkey Sandwich</label>
-                <label><input type="checkbox" name="item" value="Ham Sandwich"> Ham Sandwich</label>
-                <label><input type="checkbox" name="item" value="Tuna Fish Sandwich"> Tuna Fish Sandwich</label>
+                <label><input type="checkbox" name="item" value="Sandwich"> Sandwich</label>
                 <label><input type="checkbox" name="item" value="Lunchable"> Lunchable</label>
                 <label><input type="checkbox" name="item" value="Quesadilla"> Quesadilla</label>
                 <label><input type="checkbox" name="item" value="Hot Dogs"> Hot Dogs</label>
@@ -99,8 +97,7 @@
                 <label><input type="checkbox" name="item" value="Rotisserie Chicken"> Rotisserie Chicken</label>
                 <label><input type="checkbox" name="item" value="Chicken Drumsticks"> Chicken Drumsticks</label>
                 <label><input type="checkbox" name="item" value="Taquitos"> Taquitos</label>
-                <label><input type="checkbox" name="item" value="Tostinoes"> Tostinoes</label>
-                <label><input type="checkbox" name="item" value="Totino's Pizza Rolls"> Totino's Pizza Rolls</label>
+		<label><input type="checkbox" name="item" value="Totino's Pizza Rolls"> Totino's Pizza Rolls</label>
                 <label><input type="checkbox" name="item" value="Frozen Pizza"> Frozen Pizza</label>
                 <label><input type="checkbox" name="item" value="Handmade Pizza"> Handmade Pizza</label>
 		<label><input type="checkbox" name="item" value="Super Nachos"> Super Nachos</label>
