--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 		<label><input type="checkbox" name="item" value="Super Nachos"> Super Nachos</label>
 		<label><input type="checkbox" name="item" value="Bean Burrito"> Bean Burrito</label>
 		<label><input type="checkbox" name="item" value="Soft Tacos"> Soft Tacos</label>
+		<label><input type="checkbox" name="item" value="Loaded Baked Potato"> Loaded Baked Potato</label>
             </form>
         </article>
 
