--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
     <script>
 		// Array of available ingredients
-		const availableIngredients = ['bread', 'banana', 'almond butter', 'strawberry jam', 'eggs', 'maple syrup', 'blueberries', 'pancake mix', 'cinnamon', 'potatoes', 'garlic', 'onion', 'butter', 'bacon', 'plain frozen waffles', 'sliced ham', 'sliced cheese', 'tunafish', 'tomatoes', 'butter spread', 'mustard', 'mayo', 'sliced pickles', 'shreaded cheese', 'flour tortillas', 'hot dogs', 'hot dog buns', 'ketchup', 'tomato paste', 'diced tomatoes', 'italian seasoning', 'ground turkey', 'ham', 'kalamata olives', 'margarita pizza', 'chicken taquitos', 'nacho chips', 'salsa', 'sour cream', 'shreaded cheese', 'refried beans', 'tomatoes', 'green onions', 'cilantro', 'garlic salt', 'basil pesto', 'cereal'];
+		const availableIngredients = ['bread', 'banana', 'almond butter', 'strawberry jam', 'eggs', 'maple syrup', 'blueberries', 'pancake mix', 'cinnamon', 'potatoes', 'garlic', 'onion', 'butter', 'bacon', 'plain frozen waffles', 'sliced ham', 'sliced cheese', 'tunafish', 'tomatoes', 'butter spread', 'mustard', 'mayo', 'sliced pickles', 'shreaded cheese', 'flour tortillas', 'hot dogs', 'hot dog buns', 'ketchup', 'tomato paste', 'diced tomatoes', 'italian seasoning', 'ground turkey', 'ham', 'kalamata olives', 'margarita pizza', 'chicken and cheese taquitos', 'nacho chips', 'salsa', 'sour cream', 'shreaded cheese', 'refried beans', 'tomatoes', 'green onions', 'cilantro', 'garlic salt', 'basil pesto', 'cereal'];
 		
 		// Function to apply classes to labels based on ingredient availability
 		function applyIngredientClasses() {
