--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <label><input type="checkbox" name="item" value="Pancakes" onchange="toggleIngredients(this, 'pancake-ingredients')"> Pancakes</label>
 					<div id="pancake-ingredients" style="display: none;">
 					<p id="ingredients-list">
-						<label><input type="checkbox" name="ingredient" value="pancake batter" disabled> pancake batter</label>
+						<label><input type="checkbox" name="ingredient" value="pancake mix" disabled> pancake mix</label>
 						<label><input type="checkbox" name="ingredient" value="cinnamon"> cinnamon</label>
 						<label><input type="checkbox" name="ingredient" value="maple syrup"> maple syrup</label>
 						<label><input type="checkbox" name="ingredient" value="corn syrup"> corn syrup</label>
@@ -386,7 +386,8 @@
 			'refried beans', 
 			'garlic salt', 
 			'basil pesto', 
-			'cereal'
+			'cereal',
+			'vanilla almond milk'
 		];
 		
 		// Function to apply classes to labels based on ingredient availability
