--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 				<label><input type="checkbox" name="item" value="Cereal" onchange="toggleIngredients(this, 'cereal-ingredients')"> Cereal</label>
 		    			<div id="cereal-ingredients" style="display: none;">
 					<p id="ingredients-list">
-						<label><input type="checkbox" name="ingredient" value="cereal"> cereal</label>
-						<label><input type="checkbox" name="ingredient" value="vanilla almond milk"> vanilla almond milk</label>
+						<label><input type="checkbox" name="ingredient" value="cereal" disabled> cereal</label>
+						<label><input type="checkbox" name="ingredient" value="vanilla almond milk" disabled> vanilla almond milk</label>
 					</p>
 					</div>
             </form>
